<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_user"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:textSize="28dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="5dp"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/padlock"
            android:drawablePadding="5dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/username"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/padlock"
            android:drawablePadding="5dp"
            android:layout_below="@+id/password"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_password" />
        <Button
            android:id="@+id/btnsignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textStyle="bold"
            android:textColor="@color/vellum"
            android:backgroundTint="@color/black"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/repassword" />

    </LinearLayout>
</ScrollView>