<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/tittle_profile"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="30dp"
                />
            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/img"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/my_name"
                android:textStyle="bold"
                android:textSize="18sp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_image"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                android:paddingStart="25dp"
                android:backgroundTint="@color/black"
                android:layout_gravity="center"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:paddingEnd="25dp"
                android:layout_marginBottom="25dp"
                />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:ems="20"
                android:hint="@string/your_name"
                android:inputType="textPersonName"
                android:paddingBottom="20dp"
                android:importantForAutofill="no"
                android:layout_marginBottom="18dp"/>
            <EditText
                android:id="@+id/edit_lastName"
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:ems="20"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:paddingBottom="20dp"
                android:importantForAutofill="no"
                android:layout_marginBottom="18dp"/>

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:ems="20"
                android:digits="0123456789"
                android:inputType="number"
                android:hint="@string/my_phone"
                android:paddingBottom="20dp"
                android:importantForAutofill="no"
                android:layout_marginBottom="18dp"/>
            <EditText
                android:id="@+id/edit_email"
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:ems="20"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="20dp"
                android:importantForAutofill="no"
                android:layout_marginBottom="18dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:paddingStart="25dp"
                android:layout_gravity="center"
                android:text="@string/save"
                android:textSize="15dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:textAllCaps="false"
                android:paddingEnd="25dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>