<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_front_page_fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp"
    tools:context=".FrontPageFragment"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingTop="16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vellum_store"
                android:layout_marginRight="110dp"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="@color/darkVellum"
                />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/facebook"
                />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ins"
                />
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_catalogue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="Catalogo"
            android:textSize="15dp"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="225dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:src="@drawable/portada" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle1"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="20dp"
            android:layout_marginBottom="5dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="125dp"
                android:layout_height="170dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/ropa3"
                />
            <ImageView
                android:layout_width="125dp"
                android:layout_height="170dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/ropa1"
                />
            <ImageView
                android:layout_width="125dp"
                android:layout_height="170dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/ropa2"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/text1"
                />
            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/text2"
                />
            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/text3"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/gray"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle2"
            android:textSize="20dp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle2_text"
            android:layout_marginBottom="10dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/week"
            />

    </LinearLayout>
</ScrollView>